--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -219,7 +219,7 @@
         <!--Tips Next View Controller-->
         <scene sceneID="D5F-Nr-nc3">
             <objects>
-                <viewController storyboardIdentifier="TipsNextView" id="JBd-KT-tjW" customClass="TipsNextViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TipsNextView" hidesBottomBarWhenPushed="YES" id="JBd-KT-tjW" customClass="TipsNextViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1zq-ec-bgU"/>
                         <viewControllerLayoutGuide type="bottom" id="6zR-iC-zi0"/>
@@ -228,42 +228,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fzN-r2-3PC">
-                                <rect key="frame" x="128" y="125" width="120" height="120"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4y-z0-Elm">
+                                <rect key="frame" x="17" y="335" width="342" height="242"/>
+                                <color key="backgroundColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="342" id="3ep-uS-RsE"/>
+                                    <constraint firstAttribute="height" constant="242" id="xdz-RF-iF3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fzN-r2-3PC">
+                                <rect key="frame" x="28" y="84" width="320" height="210"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="2Ym-Kd-9nC"/>
+                                    <constraint firstAttribute="width" constant="320" id="3vL-cV-F45"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="5sY-3b-mSP"/>
                                     <constraint firstAttribute="width" secondItem="fzN-r2-3PC" secondAttribute="height" multiplier="1:1" id="H8j-Y4-QhD"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="Mwn-mQ-ZZk"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="R2o-sJ-dVk"/>
                                     <constraint firstAttribute="width" secondItem="fzN-r2-3PC" secondAttribute="height" multiplier="1:1" id="TDN-5x-zMX"/>
                                     <constraint firstAttribute="height" constant="200" id="bYi-qS-N7d"/>
+                                    <constraint firstAttribute="height" constant="210" id="sIf-MK-8ci"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="2Ym-Kd-9nC"/>
                                         <exclude reference="5sY-3b-mSP"/>
                                         <exclude reference="H8j-Y4-QhD"/>
                                         <exclude reference="Mwn-mQ-ZZk"/>
                                         <exclude reference="R2o-sJ-dVk"/>
+                                        <exclude reference="TDN-5x-zMX"/>
                                         <exclude reference="bYi-qS-N7d"/>
                                     </mask>
                                 </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="番号とタイトルが入る" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRf-x4-Tab">
-                                <rect key="frame" x="103" y="84" width="170" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="番号とタイトルが入る" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kRf-x4-Tab">
+                                <rect key="frame" x="103" y="304" width="170" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" text="テキストが入る" translatesAutoresizingMaskIntoConstraints="NO" id="eW6-2w-1Mi">
-                                <rect key="frame" x="88" y="270" width="200" height="200"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="テキストが入る" translatesAutoresizingMaskIntoConstraints="NO" id="eW6-2w-1Mi">
+                                <rect key="frame" x="18" y="336" width="340" height="240"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="8Lh-3i-635"/>
                                     <constraint firstAttribute="width" secondItem="eW6-2w-1Mi" secondAttribute="height" multiplier="1:1" id="FAl-vH-i3W"/>
                                     <constraint firstAttribute="width" secondItem="eW6-2w-1Mi" secondAttribute="height" multiplier="1:1" id="HIP-Ua-mzA"/>
+                                    <constraint firstAttribute="width" constant="340" id="L6H-SC-KXL"/>
                                     <constraint firstAttribute="width" secondItem="eW6-2w-1Mi" secondAttribute="height" multiplier="1:1" id="Mtj-u7-6HJ"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="240" id="Qcy-07-ipz"/>
+                                    <constraint firstAttribute="height" constant="240" id="XuI-5C-vVR"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="YhH-8w-6iG"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="hx8-sT-EFb"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="lHq-Hs-SXY"/>
@@ -279,7 +296,9 @@
                                         <exclude reference="HIP-Ua-mzA"/>
                                         <exclude reference="Mtj-u7-6HJ"/>
                                         <exclude reference="Qcy-07-ipz"/>
+                                        <exclude reference="YhH-8w-6iG"/>
                                         <exclude reference="hx8-sT-EFb"/>
+                                        <exclude reference="lHq-Hs-SXY"/>
                                         <exclude reference="p6k-ta-vaM"/>
                                         <exclude reference="xlu-tI-ca9"/>
                                     </mask>
@@ -292,32 +311,46 @@
                             <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" relation="lessThanOrEqual" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="20" id="4yy-tr-klj"/>
                             <constraint firstAttribute="centerX" secondItem="eW6-2w-1Mi" secondAttribute="centerX" id="6ee-EH-Vtl"/>
                             <constraint firstItem="fzN-r2-3PC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="kRf-x4-Tab" secondAttribute="bottom" constant="20" id="7AE-BR-cpf"/>
+                            <constraint firstItem="fzN-r2-3PC" firstAttribute="top" secondItem="1zq-ec-bgU" secondAttribute="bottom" constant="20" id="8dd-1b-WwJ"/>
                             <constraint firstAttribute="centerX" secondItem="eW6-2w-1Mi" secondAttribute="centerX" id="9sd-jX-ppm"/>
                             <constraint firstAttribute="centerX" secondItem="fzN-r2-3PC" secondAttribute="centerX" id="9sl-vX-uiu"/>
+                            <constraint firstAttribute="centerX" secondItem="fzN-r2-3PC" secondAttribute="centerX" id="BRs-vl-y7a"/>
                             <constraint firstItem="fzN-r2-3PC" firstAttribute="top" relation="lessThanOrEqual" secondItem="kRf-x4-Tab" secondAttribute="bottom" constant="20" id="BqB-PN-oBu"/>
                             <constraint firstAttribute="centerX" secondItem="fzN-r2-3PC" secondAttribute="centerX" id="BxV-bj-6uO"/>
+                            <constraint firstAttribute="centerX" secondItem="kRf-x4-Tab" secondAttribute="centerX" id="CMA-xs-X9p"/>
                             <constraint firstAttribute="centerX" secondItem="eW6-2w-1Mi" secondAttribute="centerX" id="Hqf-eh-qVn"/>
                             <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" relation="lessThanOrEqual" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="8" symbolic="YES" id="I7g-Xa-H2b"/>
                             <constraint firstAttribute="centerX" secondItem="eW6-2w-1Mi" secondAttribute="centerX" id="Kvw-gK-uei"/>
+                            <constraint firstAttribute="centerX" secondItem="D4y-z0-Elm" secondAttribute="centerX" id="Ptq-3j-zV8"/>
+                            <constraint firstItem="kRf-x4-Tab" firstAttribute="top" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="10" id="TFy-mm-k56"/>
+                            <constraint firstAttribute="centerX" secondItem="eW6-2w-1Mi" secondAttribute="centerX" id="YQa-pq-9KF"/>
                             <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" relation="greaterThanOrEqual" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="20" id="afE-88-NFb"/>
                             <constraint firstAttribute="centerX" secondItem="kRf-x4-Tab" secondAttribute="centerX" id="b6r-OP-7bh"/>
                             <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="20" id="bcy-5D-0Ce"/>
                             <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" relation="lessThanOrEqual" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="20" id="ec2-3D-IZu"/>
+                            <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" secondItem="kRf-x4-Tab" secondAttribute="bottom" constant="11" id="fbk-9V-Tvg"/>
                             <constraint firstItem="kRf-x4-Tab" firstAttribute="top" relation="greaterThanOrEqual" secondItem="1zq-ec-bgU" secondAttribute="bottom" constant="20" id="rDw-ax-HLl"/>
                             <constraint firstItem="eW6-2w-1Mi" firstAttribute="top" relation="lessThanOrEqual" secondItem="fzN-r2-3PC" secondAttribute="bottom" constant="25" id="tlj-O0-yPH"/>
+                            <constraint firstItem="D4y-z0-Elm" firstAttribute="top" secondItem="kRf-x4-Tab" secondAttribute="bottom" constant="10" id="yLg-gN-ZE8"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="7AE-BR-cpf"/>
                                 <exclude reference="9sl-vX-uiu"/>
+                                <exclude reference="BRs-vl-y7a"/>
                                 <exclude reference="BqB-PN-oBu"/>
+                                <exclude reference="b6r-OP-7bh"/>
+                                <exclude reference="rDw-ax-HLl"/>
                                 <exclude reference="4yy-tr-klj"/>
                                 <exclude reference="9sd-jX-ppm"/>
                                 <exclude reference="Hqf-eh-qVn"/>
                                 <exclude reference="I7g-Xa-H2b"/>
                                 <exclude reference="Kvw-gK-uei"/>
+                                <exclude reference="YQa-pq-9KF"/>
                                 <exclude reference="afE-88-NFb"/>
                                 <exclude reference="bcy-5D-0Ce"/>
                                 <exclude reference="ec2-3D-IZu"/>
+                                <exclude reference="tlj-O0-yPH"/>
                                 <exclude reference="45t-W6-VYS"/>
                             </mask>
                         </variation>
@@ -332,7 +365,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MRu-yl-DHz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3434" y="151"/>
+            <point key="canvasLocation" x="3433.5" y="150.5"/>
         </scene>
     </scenes>
     <resources>
